2008-03-29  Jonathan Gonzalez V.  <zeus@gnu.org>

	* funciones.sql (buscar_producto): Added quote_literal to
	expresion and drop the % on search.

2006-04-14  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma.structure: Replaced the integer type of compras and
	ventas table for bigint so we can manage a very big integer as a
	total.
