@@ -1,3 +1,8 @@
+2008-06-11  Jonathan Gonzalez V.  <zeus@gnu.org>
+
+	* funciones.sql (get_guide_detail): Added function to get the
+	detail of a guide.
+
 2008-03-29  Jonathan Gonzalez V.  <zeus@gnu.org>
 
 	* funciones.sql (buscar_producto): Added quote_literal to
